src/web/themes/custom/workbc/scss/components/_card-profile.scss
$card-padding: 20px;
// start with half instead of dividing by 2 to avoid potential integer division truncation complications
$card-divider-margin-half: 20px;
$card-divider-size-half: 2px;
$card-divider-size: calc(2 * $card-divider-size-half);

.card-profile {
  position: relative; // begin positional context %card-profile
  margin-bottom: 24px;
  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
  padding: $card-padding;
  display: flex;
  flex-flow: column nowrap;

  @include media-breakpoint-up(lg) {
    flex-flow: row wrap;
    row-gap: 20px;
  }
}

.card-profile__header {
  flex: 1 1;
  margin-bottom: $card-padding;

  @include media-breakpoint-up(lg) {
    flex: 1 1 100%;
  }

  h2 {
    flex: 0 0;
    display: block;
    font-size: 1.125rem;
    line-height: 1.125rem;
    text-align: center;
    font-weight: bold;
  }

  h3 {
    flex: 0 0;
    display: block;
    font-size: 1rem;
    text-align: center;
    line-height: 1rem;
  }

  img {
    width: 100%;

    @include media-breakpoint-up(lg) {
      width: 50%;
    }
  }
}

.card-profile__content {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  flex: 1 1;

  @include media-breakpoint-up(lg) {
    flex: 1 1 100%;
  }
}

.card-profile__content-left {
  display: flex;
  flex-flow: column nowrap;
  flex: 1 1;

  @include media-breakpoint-up(lg) {
    flex: 1 1 100%;
  }
}

.card-profile__content-small {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  margin-bottom: $card-padding;
  flex: 1 1;

  @include media-breakpoint-up(lg) {
    flex-basis: calc(50% - $card-divider-size-half - $card-divider-margin-half);
    flex-flow: column nowrap;
  }
}

.card-profile__content-divider {
  border-bottom: $card-divider-size solid $workbc_palette_light_secondary;
  margin: $card-divider-margin-half 0;
  flex: 1 1;

  @include media-breakpoint-up(lg) {
    flex-basis: $card-divider-size;
    margin: 0 $card-divider-margin-half;
    border-bottom: none;
    border-right: $card-divider-size solid $workbc_palette_light_secondary;
  }
}

.card-profile__content-header {
  position: relative; // begin positional context %content-header
  flex: 0 0;
  display: inline-block;
  font-size: 1.125rem;
  line-height: 1.125rem;
  font-weight: bold;
  margin-bottom: $card-padding;
}

h3.card-profile__content-header {
  text-align: center;
}

.card-profile__content-tooltip {
  position: absolute; // relative to positional context %content-header
  top: 0;
  bottom: 0;
  right: -40px;
}

// hacky style overrides on external content we have no direct control over
.card-profile__content-item {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  flex: 1 1;
  max-width: 100%;
  overflow-x: scroll;

  img {
    max-width: 100%;
    margin: $card-padding 0;
  }

  @include media-breakpoint-up(lg) {
    overflow: initial;
  }
}

.card-profile__content-item table {
  margin-bottom: 20px;
}

.card-profile__content-table {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  flex: 1 1;

  table {
    tr {
      td {
        border: none;
        background: none;
        padding: 6px $card-padding;

        &:last-of-type {
          color: #007db2;
          font-weight: bold;
        }
      }
    }
  }
}

.card-profile__content-value {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  flex: 1 1;
  color: $workbc_palette_dark_tertiary;
  font-size: 2.5rem;
  line-height: 2.5rem;
}

.card-profile__content-tooltip {
  a.info-tooltip {
    display: inline-block;
  }
}

.card-profile__link-container {
  @include media-breakpoint-up(lg) {
    margin-top: auto;
  }
}

.card-profile__link {
  @include link-chevron;
}

.card-profile__source {
  font-size: 0.875rem;
  line-height: 0.875rem;

  em {
    font-weight: bold;
    font-style: normal;
  }
}

.card-profile__na {
  font-size: 0.875rem;
  line-height: 0.875rem;
  width: 100%;

  em {
    font-weight: bold;
    font-style: normal;
  }
}
// Two legends side by side
.card-profile__legends-container {
  margin: 60px auto 40px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  @include media-breakpoint-up(lg) {
    flex-direction: row;
    gap: 60px;
  }
}

.card-profile__legends-container .card-profile__legend:first-child {
  margin-bottom: 30px;

  @include media-breakpoint-up(lg) {
    padding-right: 55px;
    border-right: 4px solid #f2f2f2;
    margin-bottom: 0;
  }
}

// Single legend
.card-profile__legend-container {
  min-width: 180px;
  margin: 60px auto 40px;
}

.card-profile__legend {
  line-height: 1;
}

.card-profile__legend-title {
  display: flex;
  align-items: center;
  margin-bottom: 15px;
  font-size: 1rem;
  font-weight: 700;
  color: $workbc_palette_dark_default;

  &:before {
    content: "";
    display: inline-block;
    margin-right: 15px;
    width: 15px;
    height: 15px;
    background-color: #234075;
  }
}

.card-profile__legend-title--grey {
  &:before {
    background-color: #a6a6a6;
  }
}

.card-profile__legend-item {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
  font-size: 1.125rem;
  font-weight: 700;
}

.card-profile__legend-label {
  font-size: 1rem;
  font-weight: 400;
  color: $workbc_palette_dark_default;

  &:before {
    content: "";
    display: inline-block;
    margin-right: 17px;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border-style: solid;
    border-width: 2px;
  }
}

.card-profile__legend-item--low .card-profile__legend-value {
  margin-left: 17px;
}

.card-profile__legend-item--high .card-profile__legend-value {
  margin-left: 13px;
}

.card-profile__legend-label--low {
  &:before {
    border-color: #008e2d;
  }
}

.card-profile__legend-label--high {
  &:before {
    border-color: #ee0000;
  }
}

#labour_market-content .card-profile__source {
  padding-top: 50px;
}

